--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main id="Projects">
       <section>
         <h1>Mini Projects</h1>
-        <a href="./Accesibility Quiz App/index.html">Accesibility Quiz App</a>
+        <a href="./Accessibility Quiz App/index.html">Accessibility Quiz App</a>
         <a href="./Cafe Menu/index.html">Cafe Menu</a>
         <a href="./Cat Face/index.html">Cat Face</a>
         <a href="./Colored Markers/index.html">Colored Markers</a>
@@ -24,7 +24,7 @@
       <section>
         <h1>Main Projects</h1>
         <a href="Project_1-Survey Form/index.html">Survey Form</a>
-        <a href="Project_2-Tribute APp">Tribute App</a>
+        <a href="Project_2-Tribute App">Tribute App</a>
       </section>
     </main>
   </body>
