--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <main id="Projects">
       <section>
         <h1>Mini Projects</h1>
-        <a href="./Accessibility Quiz App/index.html">Accessibility Quiz App</a>
-        <a href="./Cafe Menu/index.html">Cafe Menu</a>
-        <a href="./Cat Face/index.html">Cat Face</a>
-        <a href="./Colored Markers/index.html">Colored Markers</a>
-        <a href="./Nutrition Label/index.html">Nutrition Label</a>
-        <a href="./Photo Gallery/index.html">Photo Gallery</a>
-        <a href="./Registration Form/index.html">Registration Form</a>
-        <a href="./Rothko Painting/index.html">Rothko Painting</a>
+        <button><a href="./Accessiblity Quiz App/index.html">Accessibility Quiz App</a></button>
+        <button><a href="./Cafe Menu/index.html">Cafe Menu</a></button>
+        <button><a href="./Cat Face/index.html">Cat Face</a></button>
+        <button><a href="./Colored Markers/index.html">Colored Markers</a></button>
+        <button><a href="./Nutrition Label/index.html">Nutrition Label</a></button>
+        <button><a href="./Photo Gallery/index.html">Photo Gallery</a></button>
+        <button><a href="./Registration Form/index.html">Registration Form</a></button>
+        <button><a href="./Rothko Painting/index.html">Rothko Painting</a></button>
       </section>
       <section>
         <h1>Main Projects</h1>
-        <a href="Project_1-Survey Form/index.html">Survey Form</a>
-        <a href="Project_2-Tribute App">Tribute App</a>
+        <button><a href="Project_1-Survey Form/index.html">Survey Form</a></button>
+        <button><a href="Project_2-Tribute App">Tribute App</a></button>
       </section>
     </main>
   </body>
