--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width:device-width, initial-scale:1.0" />
-    <title>freeCodeCamp - Responsive Web Design</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <main id="Projects">
-      <section>
-        <h1>Mini Projects</h1>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width:device-width, initial-scale:1.0" />
+  <title>freeCodeCamp - Responsive Web Design</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <main id="Projects">
+    <section>
+      <h1>Mini Projects</h1>
+      <div id="mini-projects">
         <button><a href="./Accessiblity Quiz App/index.html">Accessibility Quiz App</a></button>
         <button><a href="./Cafe Menu/index.html">Cafe Menu</a></button>
         <button><a href="./Cat Face/index.html">Cat Face</a></button>
@@ -20,12 +22,17 @@
         <button><a href="./Photo Gallery/index.html">Photo Gallery</a></button>
         <button><a href="./Registration Form/index.html">Registration Form</a></button>
         <button><a href="./Rothko Painting/index.html">Rothko Painting</a></button>
-      </section>
-      <section>
-        <h1>Main Projects</h1>
-        <button><a href="Project_1-Survey Form/index.html">Survey Form</a></button>
-        <button><a href="Project_2-Tribute App">Tribute App</a></button>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+    <section>
+      <h1>Main Projects</h1>
+      <button><a href="Project_1-Survey Form/index.html">Survey Form</a></button>
+      <button><a href="Project_2-Tribute App/index.html">Tribute App</a></button>
+      <button><a href="Project_3-Technical Documentation Page/index.html">Technical Documentation Page</a></button>
+      <button><a href="Project_4-Product Landing Page/index.html">Product Landing Page</a></button>
+      <button><a href="Project_5-Build a Portfoilo Page/index.html">Portfolio Page</a></button>
+    </section>
+  </main>
+</body>
+
 </html>
