--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
   <main id="Projects">
+    <h1>Resposnive Web Design</h1>
     <section>
-      <h1>Mini Projects</h1>
+      <h2>Mini Projects</h2>
       <div id="mini-projects">
         <button><a href="./Accessiblity Quiz App/index.html">Accessibility Quiz App</a></button>
         <button><a href="./Cafe Menu/index.html">Cafe Menu</a></button>
@@ -23,14 +24,14 @@
         <button><a href="./Registration Form/index.html">Registration Form</a></button>
         <button><a href="./Rothko Painting/index.html">Rothko Painting</a></button>
       </div>
-    </section>
-    <section>
-      <h1>Main Projects</h1>
-      <button><a href="Project_1-Survey Form/index.html">Survey Form</a></button>
-      <button><a href="Project_2-Tribute App/index.html">Tribute App</a></button>
-      <button><a href="Project_3-Technical Documentation Page/index.html">Technical Documentation Page</a></button>
-      <button><a href="Project_4-Product Landing Page/index.html">Product Landing Page</a></button>
-      <button><a href="Project_5-Build a Portfoilo Page/index.html">Portfolio Page</a></button>
+      <h2>Main Projects</h2>
+      <div id="main-projects">
+        <button><a href="Project_1-Survey Form/index.html">Survey Form</a></button>
+        <button><a href="Project_2-Tribute App/index.html">Tribute App</a></button>
+        <button><a href="Project_3-Technical Documentation Page/index.html">Technical Documentation Page</a></button>
+        <button><a href="Project_4-Product Landing Page/index.html">Product Landing Page</a></button>
+        <button><a href="Project_5-Build a Portfoilo Page/index.html">Portfolio Page</a></button>
+      </div>
     </section>
   </main>
 </body>
