--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Resposnive Web Design</h1>
     <section>
       <h2>Mini Projects</h2>
-      <div id="mini-projects">
+      <div id="projects">
         <button><a href="./Accessiblity Quiz App/index.html">Accessibility Quiz App</a></button>
         <button><a href="./Cafe Menu/index.html">Cafe Menu</a></button>
         <button><a href="./Cat Face/index.html">Cat Face</a></button>
@@ -25,7 +25,7 @@
         <button><a href="./Rothko Painting/index.html">Rothko Painting</a></button>
       </div>
       <h2>Main Projects</h2>
-      <div id="main-projects">
+      <div id="projects">
         <button><a href="Project_1-Survey Form/index.html">Survey Form</a></button>
         <button><a href="Project_2-Tribute App/index.html">Tribute App</a></button>
         <button><a href="Project_3-Technical Documentation Page/index.html">Technical Documentation Page</a></button>
