--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
       <h2>Mini Projects</h2>
       <div id="mini-projects">
-        <buttom><a href="./Cat Photo App/">Cat Photo App</a></buttom>
+        <button><a href="./Cat Photo App/">Cat Photo App</a></button>
         <button><a href="./Cafe Menu/index.html">Cafe Menu</a></button>
         <button><a href="./Colored Markers/index.html">Colored Markers</a></button>
         <button><a href="./Registration Form/index.html">Registration Form</a></button>
@@ -25,15 +25,15 @@
         <button><a href="./Nutrition Label/index.html">Nutrition Label</a></button>
         <button><a href="./Accessiblity Quiz App/index.html">Accessibility Quiz App</a></button>
 
-        <buttom><a href="./Balance Sheet/index.html">Balance Sheet</a></buttom>
+        <button><a href="./Balance Sheet/index.html">Balance Sheet</a></button>
         <button><a href="./Cat Face/index.html">Cat Face</a></button>
-        <buttom><a href="./Piano/index.html">Piano</a></buttom>
+        <button><a href="./Piano/index.html">Piano</a></button>
 
-        <buttom><a href="./Skyline City/index.html">Skyline City</a></buttom>
-        <buttom><a href="./Magazine/index.html">Magazine</a></buttom>
+        <button><a href="./Skyline City/index.html">Skyline City</a></button>
+        <button><a href="./Magazine/index.html">Magazine</a></button>
 
-        <buttom><a href="./Ferris Wheel/index.html">Ferris Wheel</a></buttom>
-        <buttom><a href="./Penguin/">Penguin</a></buttom>
+        <button><a href="./Ferris Wheel/index.html">Ferris Wheel</a></button>
+        <button><a href="./Penguin/">Penguin</a></button>
 
       </div>
       <h2>Main Projects</h2>
